--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="col-lg-9">
             <div class="display-4 m-2">Sri Charan Bodduna </div>
-            <p class="h2 m-2 heading">Generative AI Engineer | Data Scientist</p>
+            <p class="h2 m-2 heading">Data Scientist - Generative AI</p>
             <p class="text text-justify m-2">
               Passionate about exploring data and finding insights using Large Language Models and data science
               tools. Capable of building Machine Learning applications to solve business problems. Building highly
@@ -372,30 +372,12 @@
             </div>
 
             <hr>
-            <div class="h2 heading">Contact</div>
+            <!-- <div class="h2 heading">Contact</div>
             <div id="contactform" class="mb-2">
               <div class="mx-auto">
-                <form action="https://formsubmit.co/sricharan0246+pws@gmail.com" method="POST">
-                  <input type="hidden" name="_captcha" value="false">
-                  <div class="form-group">
-                    <label for="cf-name" class="text">Name</label>
-                    <input type="text" class="form-control" id="cf-name" name="name" placeholder="John Doe" required>
-                  </div>
-
-                  <div class="form-group">
-                    <label for="cf-email" class="text">Email address</label>
-                    <input type="email" class="form-control" id="cf-email" name="email" placeholder="johnd@example.com"
-                      required>
-                  </div>
-
-                  <div class="form-group">
-                    <label for="cf-msg" class="text">Message</label>
-                    <textarea class="form-control" id="cf-msg" name="message" rows="3"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-info">Send Message</button>
-                </form>
+                <a href="mailto:sricharan0246@gmail.com">sricharan0246@gmail.com</a>
               </div>
-            </div>
+            </div> -->
 
             <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
