--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             </div>
             <div class="col-lg-9">
               <div class="h3 project-title">Peterbilt Cost Optimization - UNT Data Science Hackathon 2024</div>
-              <span><a class="btn btn-link my-hyperlinks" href="https://github.com/sricharan245/ITDS-Hackathon">GitHub</a></span>
+              <span><a class="btn btn-link my-hyperlinks"
+                  href="https://github.com/sricharan245/ITDS-Hackathon">GitHub</a></span>
               <!-- <i class="fa-solid fa-link link-icon"></i> -->
               <div class="p text text-justify">
                 Developed a highly efficient Machine Learning ensemble models to optimize maintenance
@@ -113,8 +114,8 @@
               </div>
               <div class="col-lg-9">
                 <div class="h3 project-title">Research Copilot – AI Research Assistant – HackUNT 2024</div>
-                <span><a class="btn btn-link my-hyperlinks"
-                    href="https://research-copilot-ai.streamlit.app/">App Link</a>
+                <span><a class="btn btn-link my-hyperlinks" href="https://research-copilot-ai.streamlit.app/">App
+                    Link</a>
                   <a class="btn btn-link my-hyperlinks"
                     href="https://github.com/sricharan245/Research-Copilot-App">GitHub</a></span>
                 <!-- <i class="fa-solid fa-link link-icon"></i> -->
@@ -147,13 +148,30 @@
             </div>
             <div class="row">
               <div class="col-lg-3">
+                <img src="assets/images/moviereco.jpeg" width="250px" height="180px">
+              </div>
+              <div class="col-lg-9">
+                <div class="h3 project-title">Movie Lens recommendation system</div>
+                <span><a class="btn btn-link my-hyperlinks"
+                  href="https://github.com/sricharan245/python-developments/tree/main/Recommendation-System">GitHub
+                  Link</a></span> 
+                <div class="p text text-justify">
+                  Created a movie recommendation system with basic techniques like Correlation and Machine Learning
+                  models like kNN. The recommendation system covers filtering strategies like Content-based and
+                  Collaborative-based filtering. These systems can be useful for any entertainment businesses to keep
+                  their customers engage and grow their business.
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-3">
                 <img src="assets/images/jobbuddy_ai.jpeg" width="250px" height="180px">
               </div>
               <div class="col-lg-9">
                 <div class="h3 project-title">JobBuddy.ai LLM application using Google Gemini</div>
                 <span><a class="btn btn-link my-hyperlinks"
                     href="https://github.com/sricharan245/Gemini-Projects/tree/9fd92137fe1f3d9b1dd3787d3ce3dcfdd177682a/Jobs-Buddy-ai">GitHub
-                    </a></span>
+                  </a></span>
                 <!-- <i class="fa-solid fa-link link-icon"></i> -->
                 <div class="p text text-justify">
                   Developed an LLM application that can act as friend during job search. The application is capable of
@@ -171,7 +189,7 @@
                 <div class="h3 project-title">Handwritten digits classification using TensorFlow</div>
                 <span><a class="btn btn-link my-hyperlinks"
                     href="https://github.com/sricharan245/handwritten-digits-classification">GitHub
-                    </a></span>
+                  </a></span>
                 <div class="p text text-justify">Implemented a deep learning AI model to classify handwritten numeric
                   digits
                   on
@@ -188,7 +206,7 @@
                 <div class="h3 project-title">A Predictive Journey into Oman Car Prices using R language</div>
                 <span><a class="btn btn-link my-hyperlinks"
                     href="https://github.com/sricharan245/R-projects/tree/2d51b5f4ba8cc3a3c21cbe7664c0e9987572730a/Oman%20Car%20Price%20Prediction">GitHub
-                    </a></span>
+                  </a></span>
                 <div class="p text text-justify">Built an end-to-end machine learning and statistical modeling using R
                   language for
                   predicting car prices, which effectively
@@ -204,7 +222,7 @@
                 <div class="h3 project-title">Dallas Crime Analysis Reporting using Tableau</div>
                 <span><a class="btn btn-link my-hyperlinks"
                     href="https://github.com/sricharan245/dallas-police-arrests-dashboard">GitHub
-                    </a></span>
+                  </a></span>
                 <div class="p text text-justify">Developed a eye catching data visualization on city of Dallas police
                   arrests. I
                   have
@@ -227,7 +245,7 @@
                 <div class="h3 project-title">Heart Attack Prediction System using Decision Tree Algorithm</div>
                 <span><a class="btn btn-link my-hyperlinks"
                     href="https://github.com/sricharan245/python-developments/tree/8c4ad3a1de9c84d3352abc4b647d6e45e80d98b2/heartattack_prediction">GitHub
-                    </a></span>
+                  </a></span>
                 <div class="p text text-justify ">
                   Built the predictive ML model which can predict whether a patient have chance getting heart
                   attack.
