--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
 
 <body>
   <div class="container-fluid">
-
-
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: rgba(33, 37, 41, 0.95);">
       <div class="container">
         <a class="navbar-brand fw-bold" href="#home">
@@ -401,6 +399,32 @@
 
         </div>
     </section>
+
+    <section id="education" class="experience-section">
+      <div class="container">
+        <div class="section-header">
+          <h2 class="section-title">Education</h2>
+          <div class="title-underline"></div>
+        </div>
+
+        <div class="experience-grid">
+          <!-- UNT Education Card -->
+          <div class="experience-card">
+            <div class="company-logo">
+              <img src="assets/images/UNT_logo.png" alt="UNT Logo">
+            </div>
+            <div class="experience-content">
+              <div class="row">
+                <div class="col-10"><h3>University of North Texas</h3></div>
+                <span class="col-2 duration" style=" text-align: right; font-size: medium;">Denton, Texas</span>
+              </div>
+              <span class="duration" style="float: right; font-size: medium;">January 2023 - December 2024</span>
+              <div class="position-badge">Masters in Advanced Data Analytics</div>
+            </div>
+          </div>   
+        </div>
+    </section>
+
   </div>
 
   <!-- Footer -->
