image name correction

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
           <!-- UNT Experience Card -->
           <div class="experience-card">
             <div class="company-logo">
-              <img src="assets/images/UNT_logo.png" alt="UNT Logo">
+              <img src="assets/images/unt_logo.png" alt="UNT Logo">
             </div>
             <div class="experience-content">
               <h3>University of North Texas</h3>
@@ -411,7 +411,7 @@
           <!-- UNT Education Card -->
           <div class="experience-card">
             <div class="company-logo">
-              <img src="assets/images/UNT_logo.png" alt="UNT Logo">
+              <img src="assets/images/unt_logo.png" alt="UNT Logo">
             </div>
             <div class="experience-content">
               <div class="row">
